--- a/configurator.html
+++ b/configurator.html
@@ -7,41 +7,13 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<style>
-   .set-width >div{
-     width:50% ;
-     margin-right:10px;
- }
- p{
-  margin: 0;
- }
- .number-input {
-      display: flex;
-      align-items: center;
-    }
-
-    .qty-counter {
-      width: 50px; /* Adjust the width as needed */
-      text-align: center;
-      /* Remove default arrows */
-      -moz-appearance: textfield;
-      -webkit-appearance: none;
-      appearance: none;
-    }
-
-    .qty-counter::-webkit-inner-spin-button,
-    .qty-counter::-webkit-outer-spin-button {
-      -webkit-appearance: none;
-      margin: 0;
-    }
-</style>
 <div class="container mt-3 mb-3">
   <div class="row input-content">
       
-  <div class="col-lg-6">
+  <div class="col-lg-5">
   <form action="/action_page.php">
     <div class="batteryBank d-flex set-width">
       <div class="batteryBank-label">
@@ -155,57 +127,65 @@
     <button type="submit" class="btn btn-primary mt-3">Submit</button>
   </form>
 </div>
-<div class="col-lg-6">
+<div class="col-lg-7 mbl-mg-tp">
    
   <div class="container ">
-    <div class="row">
-      <div class="col-lg-2">
-        <h6>GP Part No</h6>
-      </div>
-      <div class="col-lg-8">
-        <h6>Description</h6>
-      </div>
-      <div class="col-lg-2 text-center">
-        <h6>Qty</h6>
-      </div>
-    </div>
-    <div class="row border-bottom pb-3 pt-3 print-section">
-      <div class="col-lg-2">
-        <p class="port-number">83140</p>
-      </div>
-      <div class="col-lg-8">
-        <div class="right-description">
-          <p class="description-text">GP-RVC-BC - ADV LFP RVC System Harness</p>
+    <div class="row cust-css">
+      <div class="header-item">
+        <div class="col-lg-2 header col-sm-2">
+          <h6>GP Part No</h6>
+        </div>
+        <div class="col-lg-8 header col-sm-8">
+          <h6>Description</h6>
+        </div>
+        <div class="col-lg-2 header text-center col-sm-2">
+          <h6>Qty</h6>
         </div>
       </div>
-      <div class="col-lg-2 text-center">
-        <p class="qty-text">1</p>
-      </div>
     </div>
-    <div class="row border-bottom pb-3 pt-3 print-section">
-      <div class="col-lg-2">
-        <p class="port-number">83140</p>
-      </div>
-      <div class="col-lg-8">
-        <div class="right-description">
-          <p class="description-text">GP-ADV-BC-400 - RVC Battery Connection Harness, 400mm</p>
+    <div class="row border-bottom  print-section">
+      <div class="header-item">
+        <div class="col-lg-2 cust-bdr col-sm-2">
+          <p class="port-number">83140</p>
+        </div>
+        <div class="col-lg-8 cust-bdr col-sm-8">
+          <div class="right-description">
+            <p class="description-text">GP-RVC-BC - ADV LFP RVC System Harness</p>
+          </div>
+        </div>
+        <div class="col-lg-2 text-center cust-bdr col-sm-2">
+          <p class="qty-text">1</p>
         </div>
       </div>
-      <div class="col-lg-2 text-center">
-        <p class="qty-text">3</p>
-      </div>
     </div>
-    <div class="row border-bottom pb-3 pt-3 print-section">
-      <div class="col-lg-2">
-        <p class="port-number">83140</p>
-      </div>
-      <div class="col-lg-8">
-        <div class="right-description">
-          <p class="description-text">GP-RVC-BCR - ADV LFP Terminating Resistor</p>
+    <div class="row border-bottom  print-section">
+      <div class="header-item">
+        <div class="col-lg-2 cust-bdr second-row col-sm-2">
+          <p class="port-number">83140</p>
+        </div>
+        <div class="col-lg-8 cust-bdr second-row col-sm-8">
+          <div class="right-description">
+            <p class="description-text">GP-ADV-BC-400 - RVC Battery Connection Harness, 400mm</p>
+          </div>
+        </div>
+        <div class="col-lg-2 text-center cust-bdr second-row col-sm-2">
+          <p class="qty-text">3</p>
         </div>
       </div>
-      <div class="col-lg-2 text-center">
-        <p class="qty-text">2</p>
+    </div>
+    <div class="row border-bottom  print-section">
+      <div class="header-item">
+        <div class="col-lg-2 cust-bdr col-sm-2">
+          <p class="port-number">83140</p>
+        </div>
+        <div class="col-lg-8 cust-bdr col-sm-8">
+          <div class="right-description">
+            <p class="description-text">GP-RVC-BCR - ADV LFP Terminating Resistor</p>
+          </div>
+        </div>
+        <div class="col-lg-2 text-center cust-bdr col-sm-2">
+          <p class="qty-text">2</p>
+        </div>
       </div>
     </div>
   </div>
